--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ description: The place to find all of Daniel's courses and tutorials.
 url: "https://dgarhdez.github.io"
 repository: dgarhdez/dgarhdez.github.io # for github-metadata plugin
 permalink: pretty
+
+plugins:
+  - jemoji
