--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-remotetheme: just-the-docs/just-the-docs
-title: Daniel's Docs
-description: The place to find all of Daniel's courses and tutorials.
+theme: just-the-docs
+title: Regression to the Mean
+description: Daniel García Hernández's personal site
 url: "https://dgarhdez.github.io"
 repository: dgarhdez/dgarhdez.github.io # for github-metadata plugin
 permalink: pretty
