--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: just-the-docs
+remotetheme: just-the-docs/just-the-docs
 title: Regression to the Mean
 description: Daniel García Hernández's personal site
 url: "https://dgarhdez.github.io"
