--- a/_config.yml
+++ b/_config.yml
@@ -8,16 +8,13 @@ nav_enabled: true
 heading_anchors: true
 last_edit_timestamp: true
 last_edit_time_format: "%b %e %Y at %I:%M %p"
-
-plugins:
-  - jemoji
+enable_copy_code_button: true
 
 mermaid:
   # Version of mermaid library
   # Pick an available version from https://cdn.jsdelivr.net/npm/mermaid/
   version: "9.1.3"
 
-kramdown:
-  syntax_highlighter_opts:
-    block:
-      line_numbers: true
+plugins:
+  - jemoji
+  - mermaid
