--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ heading_anchors: true
 last_edit_timestamp: true
 last_edit_time_format: "%b %e %Y at %I:%M %p"
 enable_copy_code_button: true
+usemathjax: true
 
 mermaid:
   # Version of mermaid library
