--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,14 @@ heading_anchors: true
 last_edit_timestamp: true
 last_edit_time_format: "%b %e %Y at %I:%M %p"
 enable_copy_code_button: true
-usemathjax: true
+markdown: kramdown
+kramdown:
+  input: GFM
+  math_engine: mathjax
+  syntax_highlighter: rouge
+
+# Include MathJax
+mathjax: true
 
 mermaid:
   # Version of mermaid library
