--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink: pretty
 
 markdown: kramdown
 kramdown:
-  math_engine: katex
+  math_engine: mathjax
 
 mermaid:
   # Version of mermaid library
